# libtglang

./: .gitignore  README.md
src/: CMakeLists.txt  GPT2Tokenizer.hpp  merges_data.cpp  merges_data.h  merges_data2.cpp  model_data_qs.h  model_wrapper.cpp  model_wrapper.h  readme.md  tglang.cpp  tglang.hpp  vocab_keys.cpp  vocab_keys.h
src/onnxruntime-linux-x64-1.16.2/lib/: libonnxruntime.so.1.16.2
src/onnxruntime-osx-arm64-1.16.2/lib/: libonnxruntime.dylib
src/onnxruntime-osx-arm64-1.16.2/lib/libonnxruntime.1.16.2.dylib.dSYM/Contents/: Info.plist
train/: convert-model.ipynb  dataset-prepare.ipynb  dataset_tg-prepare.ipynb  train.ipynb
train/tester-my mac/: CMakeLists.txt  tglang-tester.cpp  tglang.h
